--- a/index.html
+++ b/index.html
@@ -8,6 +8,31 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 </head>
 <body>
+	<h1>Best movies!</h1>
+	
+	Commedy:
+	<a href="https://www.filmweb.pl/Forrest.Gump" target="_blank" title="Check on filmweb">
+		Forrest Gump (1994)
+	</a>
+	
+	<br><br>
+	
+	<a href="https://www.filmweb.pl/Forrest.Gump" target="_blank" title="Run Forrest, Run">
+		<img src="img/forrest.jpg">
+	</a>
+
+	<br><br>
+	
+	Horror: 
+	<a href="https://www.filmweb.pl/Obcy" target="_blank" title="Check on filmweb">
+		Alien 8
+	</a>
+
+	<br><br>
+
+	<a href="https://www.filmweb.pl/Obcy" target="_blank" title="Do not be afraid">
+		<img src="img/alien.jpg">
+	</a>
 
 </body>
 </html>
