Update website layout

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -9,6 +9,7 @@
 	<meta name="description" content="I will create amazing, extraordinary website for you!">
 	<meta name="keywords" content="some, of, the, keywords">
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Playfair+Display&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -17,68 +18,35 @@
 
 	<div class="rectangle">
 
-		<div id="logo">
-logo			
-
-		</div>
-
-		<div id="clock">
-clock			
-		</div>
+		<div id="logo">John Johnson</div>
+		<div id="clock">12:00:00</div>
 
 	</div>
 
 	<div class="square">
-square		
-		<div class="title1">
-			
-		</div>	
+	
+		<div class="tile1">1</div>	
+		<div class="tile1">1</div>
+		<div style="clear: both;"></div>
 
-		<div class="title1">
-			
-		</div>
+		<div class="tile2">2</div>
+		<div class="tile3">3</div>
+		<div style="clear: both;"></div>
 
-		<div class="title2">
-			
-		</div>
-
-		<div class="title3">
-
-		</div>
-
-		<div class="title4">
-			
-		</div>
+		<div class="tile4">4</div>
 
 	</div>
 
-	<div class="square">
-square2		
-		<div class="title5">
-			
-		</div>	
-
-		<div class="yt">
-			
-		</div>
-
-		<div class="fb">
-			
-		</div>
-
-		<div class="g+">
-
-		</div>
-
-		<div class="tw">
-			
-		</div>
-		
+	<div class="square">	
+		<div class="tile5">5</div>	
+		<div class="yt">yt</div>
+		<div class="fb">fb</div>
+		<div class="gplus">g+</div>
+		<div class="tw">tw</div>	
 	</div>
+	<div style="clear: both;"></div>
 
-	<div class="rectangle">
-rectangle2	
-	</div>
+	<div class="rectangle">2020 &copy; John Johnson - Portfolio, contact: john.johnson@company.com</div>
 
 </div>
 
