Add icons for web platforms

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -9,6 +9,7 @@
 	<meta name="description" content="I will create amazing, extraordinary website for you!">
 	<meta name="keywords" content="some, of, the, keywords">
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="css/fontello.css">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Playfair+Display&display=swap" rel="stylesheet">
 
 </head>
@@ -39,10 +40,18 @@
 
 	<div class="square">	
 		<div class="tile5">5</div>	
-		<div class="yt">yt</div>
-		<div class="fb">fb</div>
-		<div class="gplus">g+</div>
-		<div class="tw">tw</div>	
+		<div class="yt">
+			<i class="icon-youtube"></i>
+		</div>
+		<div class="fb">
+			<i class="icon-facebook-rect"></i>
+		</div>
+		<div class="gplus">
+			<i class="icon-googleplus-rect"></i>
+		</div>
+		<div class="tw">
+			<i class="icon-twitter-bird"></i>
+		</div>	
 	</div>
 	<div style="clear: both;"></div>
 
