--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -10,7 +10,8 @@
 	<meta name="keywords" content="some, of, the, keywords">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="css/fontello.css">
-	<link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Playfair+Display&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Raleway:400,500&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -26,15 +27,25 @@
 
 	<div class="square">
 	
-		<div class="tile1">1</div>	
-		<div class="tile1">1</div>
+		<div class="tile1">
+			<i class="icon-user"></i> </br> Who am I?
+		</div>	
+		<div class="tile1">
+			<i class="icon-laptop-1"></i> </br> What do I offer?
+		</div>
 		<div style="clear: both;"></div>
 
-		<div class="tile2">2</div>
-		<div class="tile3">3</div>
+		<div class="tile2">
+			<i class="icon-graduation-cap"></i> </br> Curriculum vitae
+		</div>
+		<div class="tile3">
+			<i class="icon-mail"></i> </br> Contact me
+		</div>
 		<div style="clear: both;"></div>
 
-		<div class="tile4">4</div>
+		<div class="tile4">
+			<i>You don't design for IE, Chrome, iPhone or Android. You design for the people.</i> </br>- J. Zeldman
+		</div>
 
 	</div>
 
