Create links to html files

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -28,19 +28,23 @@
 	<div class="square">
 	
 		<div class="tile1">
-			<i class="icon-user"></i> </br> Who am I?
+			<a href="who.html" class="tilelink"><i class="icon-user"></i> </br> Who am I?</a>
 		</div>	
 		<div class="tile1">
-			<i class="icon-laptop-1"></i> </br> What do I offer?
+			<a href="offer.html" class="tilelink"><i class="icon-laptop-1"></i> </br> What do I offer?</a>
 		</div>
 		<div style="clear: both;"></div>
 
-		<div class="tile2">
-			<i class="icon-graduation-cap"></i> </br> Curriculum vitae
-		</div>
-		<div class="tile3">
-			<i class="icon-mail"></i> </br> Contact me
-		</div>
+		<a href="cv.html" class="html5">
+			<div class="tile2">
+				<i class="icon-graduation-cap"></i> </br> Curriculum vitae
+			</div>
+		</a>
+		<a href="contact.html" class="html5">
+			<div class="tile3">
+				<i class="icon-mail"></i> </br> Contact me
+			</div>
+		</a>
 		<div style="clear: both;"></div>
 
 		<div class="tile4">
@@ -50,7 +54,15 @@
 	</div>
 
 	<div class="square">	
-		<div class="tile5">5</div>	
+		<div class="tile5">
+			Main title </br> </br>
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+		</div>	
 		<div class="yt">
 			<i class="icon-youtube"></i>
 		</div>
