--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -62,19 +62,31 @@
 			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-		</div>	
-		<div class="yt">
-			<i class="icon-youtube"></i>
 		</div>
-		<div class="fb">
-			<i class="icon-facebook-rect"></i>
-		</div>
-		<div class="gplus">
-			<i class="icon-googleplus-rect"></i>
-		</div>
-		<div class="tw">
-			<i class="icon-twitter-bird"></i>
-		</div>	
+
+		<a href="http://youtube.com" target="_blank" class="html5">	
+			<div class="yt">
+				<i class="icon-youtube"></i>
+			</div>
+		</a>
+
+		<a href="http://facebook.com" target="_blank" class="html5">	
+			<div class="fb">
+				<i class="icon-facebook-rect"></i>
+			</div>
+		</a>
+
+		<a href="http://google.com" target="_blank" class="html5">	
+			<div class="gplus">
+				<i class="icon-googleplus-rect"></i>
+			</div>
+		</a>
+
+		<a href="http://twitter.com" target="_blank" class="html5">	
+			<div class="tw">
+				<i class="icon-twitter-bird"></i>
+			</div>
+		</a>	
 	</div>
 	<div style="clear: both;"></div>
 
