Replaced link's file names with aliases google search fiendly

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -20,7 +20,9 @@
 
 	<div class="rectangle">
 
-		<div id="logo">John Johnson</div>
+		<div id="logo">
+			<a href="hire-web-developer" class="html5">John Johnson</a>
+		</div>
 		<div id="clock">12:00:00</div>
 
 	</div>
@@ -28,19 +30,19 @@
 	<div class="square">
 	
 		<div class="tile1">
-			<a href="who.html" class="tilelink"><i class="icon-user"></i> </br> Who am I?</a>
+			<a href="who-em-i" class="tilelink"><i class="icon-user"></i> </br> Who am I?</a>
 		</div>	
 		<div class="tile1">
-			<a href="offer.html" class="tilelink"><i class="icon-laptop-1"></i> </br> What do I offer?</a>
+			<a href="offer-web-sites-creation" class="tilelink"><i class="icon-laptop-1"></i> </br> What do I offer?</a>
 		</div>
 		<div style="clear: both;"></div>
 
-		<a href="cv.html" class="html5">
+		<a href="cv-developer-java-javascript-html" class="html5">
 			<div class="tile2">
 				<i class="icon-graduation-cap"></i> </br> Curriculum vitae
 			</div>
 		</a>
-		<a href="contact.html" class="html5">
+		<a href="contact-developer-java" class="html5">
 			<div class="tile3">
 				<i class="icon-mail"></i> </br> Contact me
 			</div>
