Add JS script with current local machine time

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -13,8 +13,10 @@
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Raleway:400,500&display=swap" rel="stylesheet">
 
+	<script src="timer.js"></script>
+
 </head>
-<body>
+<body onload="countDown();">
 
 <div id="container">
 
