--- a/portfolio/who.html
+++ b/portfolio/who.html
@@ -59,7 +59,7 @@
 
 	<div class="square">	
 		<div class="tile5">
-			Welcome to my portfolio! </br> </br>
+			Who am I? </br> </br>
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
