--- a/scroll-lists/index.html
+++ b/scroll-lists/index.html
@@ -12,8 +12,64 @@
 
 </head>
 <body>
-	<div id="logo">Monitory Komputerowe</div>
+	<div id="logo">Wykład #1: Monitory Komputerowe</div>
 
+	<div id="container">
+
+		<div id="contents">
+			
+			<ol>
+				<li>
+					Monitory kineskopowe CRT
+					<ul>
+						<li>Budowa monitora</li>
+						<li>Zasada działania</li>
+						<li>Maska, rodzaje masek</li>
+						<li>Wady i zalety</li>
+						<li>Dobór parametrów</li>
+					</ul>
+				</li>
+				<li>
+					Monitory ciekłokrystaliczne LCD
+					<ul>
+						<li>Budowa monitora</li>
+						<li>Zasada działania</li>
+						<li>Podział matryc</li>
+						<li>Wady i zalety</li>
+						<li>Dobór parametrów</li>
+					</ul>
+				</li>
+
+				<li>
+					Sposoby podłączenia montorów
+					<ul>
+						<li>DSUB</li>
+						<li>DVI</li>
+						<li>HDMI, Display Port</li>
+					</ul>
+				</li>
+				<li>
+					Dodatkowe Informacje
+					<ul>
+						<li>Przyszłość monitorów i wyświetlaczy?</li>
+						<li>Wykorzystywane źródła</li>
+					</ul>
+				</li>
+			</ol>
+		</div>
+
+
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+	</div>
 
 </body>
 </html>
