--- a/scroll-lists/index.html
+++ b/scroll-lists/index.html
@@ -10,62 +10,100 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link href="https://fonts.googleapis.com/css?family=Lato&display=swap&subset=latin-ext" rel="stylesheet">
 
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<script src="jquery.scrollTo.min.js"></script>
+
+	<script>
+		
+		jQuery(function($){
+			//reset scroll
+			$.scrollTo(0);
+			$('#link1').click(function() { $.scrollTo($('#1'), 500); });
+			$('#link2').click(function() { $.scrollTo($('#2'), 500); });
+			$('#link3').click(function() { $.scrollTo($('#3'), 500); });
+			$('#link4').click(function() { $.scrollTo($('#4'), 500); });
+			$('#link5').click(function() { $.scrollTo($('#5'), 500); });
+			$('#link6').click(function() { $.scrollTo($('#6'), 500); });
+			$('#link7').click(function() { $.scrollTo($('#7'), 500); });
+			$('#link8').click(function() { $.scrollTo($('#8'), 500); });
+			$('#link9').click(function() { $.scrollTo($('#9'), 500); });
+			$('#link10').click(function() { $.scrollTo($('#10'), 500); });
+			$('#link11').click(function() { $.scrollTo($('#11'), 500); });
+			$('#link12').click(function() { $.scrollTo($('#12'), 500); });
+			$('#link13').click(function() { $.scrollTo($('#13'), 500); });
+			$('#link14').click(function() { $.scrollTo($('#14'), 500); });
+			$('#link15').click(function() { $.scrollTo($('#15'), 500); });
+
+			$('.scrollUp').click(function() { $.scrollTo($('body'), 500); });
+		}
+		);
+
+		//show on scrolling
+		$(window).scroll(function() {
+			if($(this).scrollTop()>300) $('.scrollUp').fadeIn();
+			else $('.scrollUp').fadeOut();
+		}
+			);
+
+	</script>
+
 </head>
 <body>
 	<div id="logo">Wykład #1: Monitory Komputerowe</div>
 
 	<div id="container">
 
+		<a href="#" class="scrollUp"></a>
+
 		<div id="contents">
 			<ol>
 				<li>
 					Monitory kineskopowe CRT
 					<ul>
-						<li>Budowa monitora</li>
-						<li>Zasada działania</li>
-						<li><a href="#maskicrt"> Maska, rodzaje masek</a></li>
-						<li>Wady i zalety</li>
-						<li>Dobór parametrów</li>
+						<li><a id="link1" href="#">Budowa monitora</a></li>
+						<li><a id="link2" href="#">Zasada działania</a></li>
+						<li><a id="link3" href="#">Maska, rodzaje masek</a></li>
+						<li><a id="link4" href="#">Wady i zalety</a></li>
+						<li><a id="link5" href="#">Dobór parametrów</a></li>
 					</ul>
 				</li>
 				<li>
 					Monitory ciekłokrystaliczne LCD
 					<ul>
-						<li>Budowa monitora</li>
-						<li>Zasada działania</li>
-						<li>Podział matryc</li>
-						<li>Wady i zalety</li>
-						<li>Dobór parametrów</li>
+						<li><a id="link6" href="#">Budowa monitora</a></li>
+						<li><a id="link7" href="#">Zasada działania</a></li>
+						<li><a id="link8" href="#">Podział matryc</a></li>
+						<li><a id="link9" href="#">Wady i zalety</a></li>
+						<li><a id="link10" href="#">Dobór parametrów</a></li>
 					</ul>
 				</li>
 
 				<li>
 					Sposoby podłączenia montorów
 					<ul>
-						<li>DSUB</li>
-						<li>DVI</li>
-						<li>HDMI, Display Port</li>
+						<li><a id="link11" href="#">DSUB</a></li>
+						<li><a id="link12" href="#">DVI</a></li>
+						<li><a id="link13" href="#">HDMI, Display Port</a></li>
 					</ul>
 				</li>
 				<li>
 					Dodatkowe Informacje
 					<ul>
-						<li>Przyszłość monitorów i wyświetlaczy?</li>
-						<li>Wykorzystywane źródła</li>
+						<li><a id="link14" href="#">Przyszłość monitorów i wyświetlaczy?</a></li>
+						<li><a id="link15" href="#">Wykorzystywane źródła</a></li>
 					</ul>
 				</li>
 			</ol>
 		</div>
 
-		<br>
-		<br>
-		<br>
+		<br><br><br><br><br><br>
 
 		<!-- ######################## SLAJD 1.1 ######################## -->
 		
 		<div class="slajd">
 		
-			<h1>Budowa monitora CRT</h1>
+			<h1 id="1">Budowa monitora CRT</h1>
 			
 			CRT to akronim od <strong>Cathode-Ray Tube</strong>, czyli lampy kineskopowej wyposażonej w działo elektronowe. W języku polskim pod tym słowem przyjęto potoczną nazwę skrótową, synonim dla wyrażenia monitor CRT – czyli oznaczenie modeli monitorów komputerowych, których wyświetlacz oparty jest na lampie obrazowej zwanej kineskopem. Właściwe określenie to monitor kineskopowy.
 			<br /><br />
@@ -90,7 +128,7 @@
 		
 		<div class="slajd">
 		
-			<h1>Zasada działania monitora CRT</h1>
+			<h1 id="2">Zasada działania monitora CRT</h1>
 			
 			Zasada tworzenia obrazu w kolorowym monitorze CRT polega na wysyłaniu w kierunku przedniej szyby powleczonej warstwą luminoforu, <strong>trzech wiązek elektronów</strong> (po jednej dla każdego składowego koloru RGB) za pomocą trzech dział elektronowych umieszczonych w tylnej części próżniowej tuby kineskopu. Wiązki te są kierowane za pomocą silnego pola magnetycznego (<strong>cewki odchylające</strong>) tak, aby trafiały w odpowiedni obszar na luminoforze.
 			<br /><br />
@@ -121,7 +159,7 @@
 		
 		<div class="slajd">
 		
-			<h1 id="maskicrt">Rodzaje masek w monitorach CRT</h1>
+			<h1 id="3">Rodzaje masek w monitorach CRT</h1>
 			
 			Przed warstwą luminoforu znajduje się tzw. <strong>maska</strong> (ang. shadow mask), która pełni funkcję filtru dbającego o to, aby elektrony uderzały idealnie w powierzchnię wyznaczonych pól luminoforu (subpikseli) - co pozytywnie wpływa na jakość obrazu.
 			<br /><br />
@@ -173,7 +211,7 @@
 		
 		<div class="slajd">
 		
-			<h1>Wady i zalety monitorów CRT</h1>
+			<h1 id="4">Wady i zalety monitorów CRT</h1>
 			
 			Wybór rodzaju monitora zależy najbardziej od jego przeznaczenia. Monitory CRT zostały praktycznie całkowicie wyparte z rynku przez monitory ciekłokrystaliczne, niemniej jednak niektóre ich unikatowe właściwości sprawiają, iż nadal używają ich np. fotografowie.
 			<br /><br />
@@ -200,7 +238,7 @@
 		
 		<div class="slajd">
 		
-			<h1>Dobór parametrów monitora CRT</h1>
+			<h1 id="5">Dobór parametrów monitora CRT</h1>
 			
 			W monitorach CRT rzeczywista powierzchnia robocza ekranu jest nieco mniejsza niż deklaruje producent, a to z powodu <strong>wypukłości ekranu</strong>, które zawsze występują w monitorze kineskopowym. Nawet w najnowszych modelach mających prawie płaskie ekrany (FST - Flat Square Tube) występują niewielkie wypukłości poziome.
 			<br /><br />
@@ -255,7 +293,7 @@
 		
 		<div class="slajd">
 		
-			<h1>Budowa monitora LCD</h1>
+			<h1 id="6">Budowa monitora LCD</h1>
 			
 			LCD to akronim od Liquid Crystal Display - wyświetlacz ciekłokrystaliczny to urządzenie, którego zasada działania oparta jest na zmianie polaryzacji światła na skutek zmian orientacji cząsteczek ciekłego kryształu pod wpływem przyłożonego pola elektrycznego.
 			<br /><br />
@@ -279,7 +317,7 @@
 		
 		<div class="slajd">
 		
-			<h1>Zasada działania monitora LCD</h1>
+			<h1 id="7">Zasada działania monitora LCD</h1>
 			
 			Zasada tworzenia obrazu w kolorowym monitorze LCD jest nieco inna niż w monitorach CRT. Zrezygnowano z działa elektronowego, dzięki czemu monitor ma dużo mniejsze gabaryty i wagę. Źródłem światła są najczęściej <strong>cienkie lampy jarzeniowe</strong> (albo <strong>diody LED</strong> w dużo droższych monitorach ledowych). Światło jest przepuszczane przez <strong>filtr polaryzacyjny</strong>, który przepuszcza fale świetlne o określonej fazie. Następnie strumień światła tafia na filtr z poziomymi szczelinami, po czym przechodzi przez warstwę polikrzemową zwaną ciekłymi kryształami i trafia na drugi filtr z pionowymi szczelinami. 
 			<br /><br />
@@ -299,7 +337,7 @@
 		
 		<div class="slajd">
 		
-			<h1>Podział matryc w monitorach LCD</h1>
+			<h1 id="8">Podział matryc w monitorach LCD</h1>
 			
 			<strong>Matryce pasywne</strong> stosowano w początkach technologii LCD - pojedyncze tranzystory sterowały całymi wierszami i kolumnami pikseli. Monitory oparte na matrycach pasywnych smużyły (miały wolny czas reakcji, pojawiały się smugi i cienie).
 			<br /><br />
@@ -358,7 +396,7 @@
 		
 		<div class="slajd">
 		
-			<h1>Wady i zalety monitorów LCD</h1>
+			<h1 id="9">Wady i zalety monitorów LCD</h1>
 			
 			Wybór rodzaju monitora zależy najbardziej od jego przeznaczenia. Monitory LCD praktycznie całkowicie wyparły z rynku monitory kineskopowe, niemniej jednak wcale nie oznacza to, iż są pozbawione wszelkich wad.
 			<br /><br />
@@ -385,7 +423,7 @@
 		
 		<div class="slajd">
 		
-			<h1>Dobór parametrów monitora LCD</h1>
+			<h1 id="10">Dobór parametrów monitora LCD</h1>
 			
 			W monitorach LCD przekątna ekranu wynosi dokładnie tyle, ile deklaruje producent, ponieważ panele ciekłokrystaliczne mają idealnie płaskie ekrany.
 			<br /><br />
@@ -454,7 +492,7 @@
 		
 		<div class="slajd">
 		
-			<h1>Złącze analogowe DSUB (VGA)</h1>
+			<h1 id="11">Złącze analogowe DSUB (VGA)</h1>
 			
 			Złącze popularne w czasach monitorów CRT - niepożądane w monitorze LCD, ponieważ zachodzi wówczas dwukrotna konwersja sygnału: zamiana sygnału cyfrowego na analogowy w karcie graficznej oraz sygnału analogowego na cyfrowy w monitorze. Podwójna konwersja powoduje straty w jakości obrazu i zwiększa podatność na zakłócenia. Nazwa DSUB pochodzi od rodzaju złącz przypominających kształtem położoną literę D. Inna nazwa to VGA (od trybu graficznego).
 			<br /><br />
@@ -473,7 +511,7 @@
 		
 		<div class="slajd">
 		
-			<h1>Złącze cyfrowe DVI (Digital Video Interface)</h1>
+			<h1 id="12">Złącze cyfrowe DVI (Digital Video Interface)</h1>
 			
 			Cyfrowy standard przesyłania sygnału wideo, w odmianach DVI-I oraz DVI-A umożliwia także przesyłanie sygnału analogowego. Kabel łączący monitor z komputerem nie może być dłuższy niż 5m.
 			<br /><br />
@@ -522,7 +560,7 @@
 		
 		<div class="slajd">
 		
-			<h1>Nowoczesne złącza cyfrowe HDMI oraz Display Port</h1>
+			<h1 id="13">Nowoczesne złącza cyfrowe HDMI oraz Display Port</h1>
 			
 			<strong>Złącze HDMI</strong> (High Definition Multimedia Interface) to cyfrowy standard przesyłania sygnału audio/wideo umożliwiający transmisję w wysokiej rozdzielczości (HD) oraz dźwięku wielokanałowego. Stosujemy go w odtwarzaczach DVD, Blu-Ray, telewizorach typu LCD i plazmowych oraz konsolach do gier. Maksymalna długość kabla: 15m.
 			<br /><br />			
@@ -554,7 +592,7 @@
 		
 		<div class="slajd">
 		
-			<h1>Przyszłość monitorów i wyświetlaczy?</h1>
+			<h1 id="14">Przyszłość monitorów i wyświetlaczy?</h1>
 			
 			Producenci wciąż prześcigają się w tworzeniu nowych technologii, które zapewnią jeszcze lepsze parametry wyświetlanego obrazu, a jednocześnie mniejsze koszty produkcji. Jaka technologia opanuje rynek w najbliższej przyszłości? Jakie znamy nowatorskie metody budowy wyświetlaczy?
 			<br /><br />
@@ -581,7 +619,7 @@
 		
 		<div class="slajd">
 		
-			<h1>Wykorzystane źródła</h1>
+			<h1 id="15">Wykorzystane źródła</h1>
 			
 			<ul>
 				<li>Urządzenia techniki komputerowej. Podręcznik do nauki zawodu technik informatyk. Helion. Tomasz Kowalski</li>
