--- a/scroll-lists/index.html
+++ b/scroll-lists/index.html
@@ -628,8 +628,9 @@
 				<li>Wikipedia.pl</li>
 			</ul>
 		</div>
-
 	</div>
+
+	<div id="footer">Website created as part of the HTML course of Miroslaw Zelent</div>
 
 </body>
 </html>
