--- a/html-5-semantics/index.html
+++ b/html-5-semantics/index.html
@@ -13,14 +13,27 @@
 	<link rel="stylesheet" href="main.css">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&amp;subset=latin-ext" rel="stylesheet">
 	
-	<!--[if lt IE 9]>
+	<!--[if lt IE 9]> -->
 	<script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
-	<![endif]-->
+
 	
 </head>
 
 <body>
+	<header>
+		<h1 class="logo">Philosophia Blog</h1>
 
+		<nav>
+			<ul class="menu">
+				<li><a href="#">Strona główna</li>
+				<li><a href="#">Pierwszy raz tutaj</li>
+				<li><a href="#">Dlaczego filozofia?</li>
+				<li><a href="#">O autorze</li>
+				<li><a href="#">Kontakt</li>
+			</ul>
+		</nav>
+		
+	</header>
 
 
 </body>
