--- a/html-5-semantics/index.html
+++ b/html-5-semantics/index.html
@@ -25,16 +25,82 @@
 
 		<nav>
 			<ul class="menu">
-				<li><a href="#">Strona główna</li>
-				<li><a href="#">Pierwszy raz tutaj</li>
-				<li><a href="#">Dlaczego filozofia?</li>
-				<li><a href="#">O autorze</li>
-				<li><a href="#">Kontakt</li>
+				<li><a href="#">Strona główna</a></li>
+				<li><a href="#">Pierwszy raz tutaj</a></li>
+				<li><a href="#">Dlaczego filozofia?</a></li>
+				<li><a href="#">O autorze</a></li>
+				<li><a href="#">Kontakt</a></li>
 			</ul>
 		</nav>
-		
 	</header>
 
+	<main>
+		<article>
+			<section>
+				<div class="categories">
+				<header>
+					<h1>Witaj w świecie filozofii.</h1>
+					<p>Czy jestes fanem filozofii? Lubisz świat idei? Jesteś ciekawy świata? Zapraszam do artykułów autorstwa najbardziej znanych filozofów.</p>
+				</header>
+
+				<div class="author">	
+					<figure>
+						<a href="#"><img src="img/alan-watts.jpg" alt="Alan Watts"></a>
+						<figcaption>Alan Watts</figcaption>
+					</figure>
+				</div>
+
+				<div class="author">
+					<figure>
+						<a href="#"><img src="img/de-mello.jpg" alt="Anthony de Mello"></a>
+						<figcaption>Anthony de Mello</figcaption>
+					</figure>
+				</div>
+
+				<div class="author">
+					<figure>
+						<a href="#"><img src="img/nietzsche.jpg" alt="Fryderyk Nietzsche"></a>
+						<figcaption>Fryderyk Nietzsche</figcaption>
+					</figure>
+				</div>
+
+				<div class="author">
+					<figure>
+						<a href="#"><img src="img/platon.jpg" alt="Platon"></a>
+						<figcaption>Platon</figcaption>
+					</figure>
+				</div>
+
+				<div class="author">
+					<figure>
+						<a href="#"><img src="img/kant.jpg" alt="Immanuel Kant"></a>
+						<figcaption>Immanuel Kant</figcaption>
+					</figure>
+				</div>
+
+				<div class="author">
+					<figure>
+						<a href="#"><img src="img/emerson.jpg" alt="Ralph Waldo Emerson"></a>
+						<figcaption>Ralph Waldo Emerson</figcaption>
+					</figure>
+				</div>
+
+			</div>
+
+			</section>
+
+			<section>
+				
+			</section>
+
+			<section>
+				
+			</section>
+		</article>
+
+	</main>
+
+	<footer></footer>
 
 </body>
 </html>
