Add footer with social media

--- a/html-5-semantics/index.html
+++ b/html-5-semantics/index.html
@@ -12,6 +12,7 @@
 	
 	<link rel="stylesheet" href="main.css">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&amp;subset=latin-ext" rel="stylesheet">
+	<link rel="stylesheet" href="css/fontello.css">
 	
 	<!--[if lt IE 9]> -->
 	<script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -162,14 +163,41 @@
 					<a href="#" class="bluebutton">Nawiązanie współpracy</a>
 
 				</div>
-
 			</section>
-
 		</article>
-
 	</main>
 
-	<footer></footer>
+	<footer>
+		
+		<div class="socials">
+			<div class="socialdivs">
+
+				<div class="fb">
+					<i class="icon-facebook"></i>
+				</div>
+
+				<div class="yt">
+					<i class="icon-youtube"></i>
+				</div>
+
+				<div class="tw">
+					<i class="icon-twitter"></i>
+				</div>
+
+				<div class="gplus">
+					<i class="icon-gplus"></i>
+				</div>
+
+				<div style="clear:both"></div>
+
+			</div>
+		</div>
+
+		<div class="info">
+			Wszelkie prawa zastrzeżone &copy.
+		</div>
+
+	</footer>
 
 </body>
 </html>
