--- a/html-5-semantics/index.html
+++ b/html-5-semantics/index.html
@@ -24,7 +24,7 @@
 	<header>
 		<h1 class="logo">Philosophia Blog</h1>
 
-		<nav>
+		<nav id="topnav">
 			<ul class="menu">
 				<li><a href="#">Strona główna</a></li>
 				<li><a href="#">Pierwszy raz tutaj</a></li>
