Complete first entry html

--- a/html-5-semantics/entry.html
+++ b/html-5-semantics/entry.html
@@ -46,6 +46,7 @@
 						<h1>Antony de Mello: Poszukiwanie akceptacji</h1>
 						<p>07.04.2020 | 19:44:30 | Mortinez Walles</p>
 					</header>	
+					4
 					Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse qui quidem unde dolore eveniet? Illum facere optio sint cum aspernatur repellendus debitis. Neque dolor illum vero quibusdam quia nesciunt eveniet!
 					Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, illum? Animi accusamus dicta inventore nemo quos repellat ipsam a, autem eaque cum nisi provident pariatur amet sit debitis voluptatibus exercitationem!
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque aliquid in eligendi laudantium. At, nemo neque error veniam sit quidem accusantium eos deleniti itaque molestiae officia repellat eius optio laboriosam!
@@ -58,6 +59,41 @@
 					Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, eveniet consequuntur temporibus saepe tempora ipsum earum vel laborum delectus ut dignissimos, esse quos perspiciatis ipsa excepturi rerum, reiciendis nisi dolor.
 					Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam quod hic corporis explicabo, dicta ea excepturi iure autem ipsa repellendus, laborum facere iste! Exercitationem nobis excepturi facilis. Molestias, nihil obcaecati?
 					Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem quas modi quisquam eaque officia, esse nesciunt mollitia consequatur, omnis facere error libero natus, harum cum commodi quidem ullam accusamus quae.
+
+					<section id="commentsSection">
+
+						<header>
+						
+							<h1>Komentarze Czytelników</h1>
+
+							<p>Podziel się z nami Twoimi komentarzami!</p>
+
+						</header>
+
+						<article>
+
+							<header>
+								<img src="img/user.jpg" alt="user">
+								<p>User 1 | 10.05.2020 | 19:20:59</p>
+							</header>
+
+							Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel in, nihil eum vero cumque aspernatur maiores fugit necessitatibus ut ea ducimus reprehenderit vitae eos sed deserunt. Sunt a tempora ex.
+
+
+						</article>
+
+						<article>
+
+							<header>
+								<img src="img/user.jpg" alt="user">
+								<p>User 2 | 09.05.2020 | 19:30:59</p>
+							</header>
+
+							Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel in, nihil eum vero cumque aspernatur maiores fugit necessitatibus ut ea ducimus reprehenderit vitae eos sed deserunt. Sunt a tempora ex.
+
+						</article>
+					</section>
+
 				</article>
 
 			</main>
@@ -80,11 +116,36 @@
 						<li>Ralph Waldo Emerson</li>
 					</ul>
 
-					<ul></ul>
+					<h2>Powiązane wpisy</h2>
 
-					<ul></ul>
+					<ul>
+						<li>Anthony de Wallo: Poszukiwanie akceptacji</li>
+						<li>Fryderyk Nietzsche: Zgładzić smoka</li>
+						<li>Alan Watts: Potrzeba kontroli</li>
+					</ul>
+
+					<h2>Archiwum bloga</h2>
+
+					<ul>
+						<li>Styczeń (6)</li>
+						<li>Luty (4)</li>
+						<li>Marzec (2)</li>
+						<li>Kwiecień (2)</li>
+						<li>Maj (5)</li>
+						<li>Czerwiec (6)</li>
+						<li>Lipiec (4)</li>
+						<li>Sierpien (4)</li>
+						<li>Lipiec (5)</li>
+						<li>Sierpien (3)</li>
+						<Li>Wrzesień (3)</Li>
+						<li>Październik (4)</li>
+						<li>Listopad (5)</li>
+						<li>Grudzień (5)</li>
+					</ul>
 
 				</nav>
+
+				<img src="img/ad.jpg" alt="ad">
 
 			</aside>
 
