Create option list

--- a/forms/index.html
+++ b/forms/index.html
@@ -46,6 +46,20 @@
 
 				</div>
 
+				<div class="row">
+
+					<label for="engine">Type of engine</label>
+					
+					<select id="engine">
+
+						<option value="d">Diesel</option>
+						<option value="g" selected>Gasoline</option>
+						<option value="e">Electric</option>
+						<option value="h">Hybrid</option>
+
+					</select>
+				
+				</div>
 
 
 			</form>		
