--- a/forms/index.html
+++ b/forms/index.html
@@ -61,6 +61,29 @@
 				
 				</div>
 
+				<div class="row">
+
+					<fieldset>
+
+						<legend>Car equipment</legend>
+
+						<div><label><input type="checkbox" value="1" name="equipment">Air Condition</label></div>
+						<div><label><input type="checkbox" value="1" name="equipment">ESP and ABS systems</label></div>
+						<div><label><input type="checkbox" value="1" name="equipment">Leather interior</label></div>
+						<div><label><input type="checkbox" value="1" name="equipment">Drive assist</label></div>
+						<div><label><input type="checkbox" value="1" name="equipment">S-Line</label></div>
+						<div><label><input type="checkbox" value="1" name="equipment">Radiobox with bluetooth</label></div>
+						<div><label><input type="checkbox" value="1" name="equipment">Matrix Led Lights</label></div>
+						<div><label><input type="checkbox" value="1" name="equipment">Heating Seats</label></div>
+						<div><label><input type="checkbox" value="1" name="equipment">Heating Steering wheel</label></div>
+						<div><label><input type="checkbox" value="1" name="equipment">Camera</label></div>
+						<div><label><input type="checkbox" value="1" name="equipment">360 cameras</label></div>
+						<div><label><input type="checkbox" value="1" name="equipment">Lane Assist</label></div>
+
+
+					</fieldset>
+
+				</div>
 
 			</form>		
 			
