--- a/forms/index.html
+++ b/forms/index.html
@@ -105,6 +105,14 @@
 					</div>
 				</div>
 
+				<div class="row">
+
+					<label>Login <input type="text" name="login" placeholder="Log in to your account"></label>
+					<label>Password <input type="password" name="password"></label>
+					<label>Search <input type="search" name="search"></label>
+
+
+				</div>
 
 
 			</form>		
