Create number input box and submit button

--- a/forms/index.html
+++ b/forms/index.html
@@ -111,6 +111,17 @@
 					<label>Password <input type="password" name="password"></label>
 					<label>Search <input type="search" name="search"></label>
 
+				</div>
+				
+				<div class="row">
+
+					<label>How many child seats required? <input type="number"></label>
+
+				</div>
+
+				<div class="row">
+
+					<input type="submit" value="Order">
 
 				</div>
 
