Create different type of buttons

--- a/forms/index.html
+++ b/forms/index.html
@@ -115,13 +115,15 @@
 				
 				<div class="row">
 
-					<label>How many child seats required? <input type="number"></label>
+					<label>How many child seats required? <input type="number" step="1"></label>
 
 				</div>
 
 				<div class="row">
 
-					<input type="submit" value="Order">
+					<input type="submit" value="SubmitOrder">
+					<input type="button" value="Button">
+					<button>SubmitOrderButton</button>
 
 				</div>
 
