Create input fields for phone number/date/time

--- a/forms/index.html
+++ b/forms/index.html
@@ -121,12 +121,25 @@
 
 				<div class="row">
 
-					<input type="submit" value="SubmitOrder">
-					<input type="button" value="Button">
-					<button>SubmitOrderButton</button>
+					<label>Email address <input type="email" placeholder="email@domain.com"></label>
+					<label>Phone number <input type="tel"></label>
 
 				</div>
 
+				<div class="row">
+
+					<label>Delivery date <input type="date" min="2020-05-10" max="2021-05-10"></label>
+					<label>Prefered delivery time <input type="time"></label>
+
+				</div>
+
+				<div class="row">
+
+					<input type="submit" value="SubmitOrder">
+					<!-- <input type="button" value="Button">
+					<button>SubmitOrderButton</button> -->
+
+				</div>
 
 			</form>		
 			
