Create text area with properties

--- a/forms/index.html
+++ b/forms/index.html
@@ -129,8 +129,15 @@
 				<div class="row">
 
 					<label>Delivery date <input type="date" min="2020-05-10" max="2021-05-10"></label>
-					<label>Prefered delivery time <input type="time"></label>
+					<label>Prefered delivery time <input type="time" min="09:00" max="17:00"></label>
 
+				</div>
+
+				<div class="row">
+					<div>
+						<label for="comment">Remarks for order:</label>
+					</div>
+						<textarea name="comment" id="comment" rows="4" cols="80" maxlength="250"></textarea>
 				</div>
 
 				<div class="row">
